--- a/Style/style.css
+++ b/Style/style.css
@@ -1,3 +1,52 @@
-article{
-    width: 200px;
+body {
+    display: grid;
+    grid-template-rows: 25px auto;
+    grid-template-columns: 250px auto;
+    min-height: 100vh;
+    
+}
+.categories {
+    width: 250px;
+    height: 25px;
+    display: flex;
+    flex-direction: column;
+    grid-column: 1;
+    grid-row: 2;
+
+}
+.categories ul{
+    list-style: none;
+}
+.categories img{
+    width: 1.5rem;
+}
+
+.entete {
+    grid-row: 1;
+    height: inherit;
+    display: flex;
+}
+
+main {
+    grid-row: 3;
+    grid-column: 2;
+}
+.jeux {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    gap: 0.5rem;
+}
+.jeux article  {
+    width: 12.5rem;
+}
+.jeux img{
+    width: 12.5rem;
+}
+.plateformes img{
+    width: 2.5rem;
+}
+.bottom-line {
+    grid-row: 4;
+    width: 100%;
 }
