--- a/Style/style.css
+++ b/Style/style.css
@@ -34,17 +34,21 @@ justify-content: start;
 nav li img{
 height: 100%;
 width: 10%;
+margin: 1px;
 }
-
+nav ul{
+    list-style: none;
+}
 nav li {
 height: 25px;
 width: 250px;
 }
 
 div.conteneur{
+    min-height: 100vh;
     display: grid;
-    grid-template-columns: 20% 80%;
-    grid-template-rows: 1fr 98fr 1fr; 
+    grid-template-columns: 250px auto;
+    grid-template-rows: 2.5rem 1fr; 
     grid-template-areas:
       "entete  entete   "
       "menu     principal"
@@ -61,8 +65,7 @@ div.conteneur{
 }
 
 .entete img{
-    height: 100%;
-    width: 5%;
+    width: 2.5rem;
 }
 
 nav{
@@ -86,3 +89,7 @@ nav{
    
 }
 
+.baspage {
+    height: 1rem;
+    grid-area: baspage;
+}
