--- a/Style/style.css
+++ b/Style/style.css
@@ -7,14 +7,16 @@
     margin: 10px;
     display:flex;
     flex-direction: column;
+    border-radius: 0.5rem;
     
 
 }
 .jeux img{
-height: 65%;
-width: 100%; 
+height: 70%;
+width: 95%; 
 margin:0px;
 justify-content: start;
+padding: 0.1rem;
 }
 
 .plateformes img{
@@ -35,6 +37,7 @@ nav li img{
 height: 100%;
 width: 10%;
 margin: 1px;
+padding: 0.1rem;
 }
 nav ul{
     list-style: none;
@@ -42,6 +45,9 @@ nav ul{
 nav li {
 height: 25px;
 width: 250px;
+display: flex;
+text-align: center;
+justify-content: start;
 }
 
 div.conteneur{
@@ -59,6 +65,7 @@ div.conteneur{
     grid-area: entete;
     display:flex;
     flex-direction: row;
+    border-bottom: 0.1rem solid;
     
     justify-content: space-between; 
     align-items: center;
@@ -72,7 +79,8 @@ nav{
     grid-area: menu;
     display:flex;
     flex-direction:column;
-    align-content:stretch;  
+    align-content:stretch;
+    border-right: 0.1rem solid;;  
 }
 
 
@@ -95,4 +103,5 @@ nav{
     display: flex;
     flex-direction: row;
     justify-content: center;
+    border-top: 0.1rem solid;
 }
