--- a/Style/style.css
+++ b/Style/style.css
@@ -20,6 +20,7 @@ width: 95%;
 margin:0px;
 justify-content: start;
 padding: 0.1rem;
+background-color: inherit;
 }
 
 .plateformes img{
@@ -27,6 +28,7 @@ padding: 0.1rem;
     width: 20%;
     margin:0px;
     justify-content: end;
+    background-color: inherit;
 }
 
 
