--- a/Style/style.css
+++ b/Style/style.css
@@ -56,7 +56,7 @@ nav a{
     display: block;
     width: 10rem;
     text-decoration: none;
-    
+
 }
 
 div.conteneur{
@@ -115,4 +115,28 @@ nav {
     flex-direction: row;
     justify-content: center;
     border-top: 0.1rem solid;
+}
+.backdrop{
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background: rgba(0,0,0,0.5);
+    display: block;
+}
+.backdrophidden {
+    display: none;
+}
+.jeuform {
+    display: block;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    border-radius: 0.5rem;
+    z-index: 1;
+    padding: 1.5rem;
+    background-color: white;
+    transform: translate(-50%,-50%);
+}
+.formcache {
+    display: none;
 }
