--- a/Style/style.css
+++ b/Style/style.css
@@ -155,6 +155,17 @@ nav {
     background-color: white;
     transform: translate(-50%,-50%);
 }
+.messageAff {
+    display: block;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    border-radius: 0.5rem;
+    z-index: 1;
+    padding: 1.5rem;
+    background-color: white;
+    transform: translate(-50%,-50%);
+}
 .formcache {
     display: none;
 }
