--- a/Style/style.css
+++ b/Style/style.css
@@ -174,3 +174,8 @@ nav {
     display: flex;
     justify-content: space-between;
 }
+.divPlat {
+    display: flex;
+    width: 50%;
+    justify-content: space-between;
+}
